// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`columnWidths() 1`] = `
"
╔══════════════════════════════════════════════════╗ OUTPUTS THROW TYPEERROR
TypeError: Cannot read properties of undefined (reading 'length')
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([ '\\x1B[31mRed\\x1B[0m', 'Normal' ], [ 'Text', 'Longer' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ '\\x1B[31mRed\\x1B[0m', 'Normal' ]
────────────────────────────────────────────────────
[ 'Text', 'Longer' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([ 'a' ], [ 'bb', 'c' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a' ]
────────────────────────────────────────────────────
[ 'bb', 'c' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 1 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([ 'hi', 'world' ], [ 'hello', 'x' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'hi', 'world' ]
────────────────────────────────────────────────────
[ 'hello', 'x' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 1, 1, 1, 1, 1 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([ [ '\\x1B[31mRed\\x1B[0m', 'Normal' ], [ 'Text', 'Longer' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ '\\x1B[31mRed\\x1B[0m', 'Normal' ], [ 'Text', 'Longer' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 4, 6 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([ [ 'a' ], [ 'bb', 'c' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a' ], [ 'bb', 'c' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 2, 1 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([ [ 'hi', 'world' ], [ 'hello', 'x' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'hi', 'world' ], [ 'hello', 'x' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 5, 5 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`columnWidths([]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[]
╚══════════════════════════════════════════════════╝"
`;

exports[`dimensions() 1`] = `
"
╔══════════════════════════════════════════════════╗ OUTPUTS THROW TYPEERROR
TypeError: Cannot read properties of undefined (reading 'length')
╚══════════════════════════════════════════════════╝"
`;

exports[`dimensions([ 'a' ], [ 'b', 'c' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a' ]
────────────────────────────────────────────────────
[ 'b', 'c' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  rows: 1,
  columns: 1
}
╚══════════════════════════════════════════════════╝"
`;

exports[`dimensions([ 'a', 'b' ], [ 'c', 'd' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a', 'b' ]
────────────────────────────────────────────────────
[ 'c', 'd' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  rows: 2,
  columns: 1
}
╚══════════════════════════════════════════════════╝"
`;

exports[`dimensions([ [ 'a' ], [ 'b', 'c' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a' ], [ 'b', 'c' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  rows: 2,
  columns: 2
}
╚══════════════════════════════════════════════════╝"
`;

exports[`dimensions([ [ 'a', 'b' ], [ 'c', 'd' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a', 'b' ], [ 'c', 'd' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  rows: 2,
  columns: 2
}
╚══════════════════════════════════════════════════╝"
`;

exports[`dimensions([]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  rows: 0,
  columns: 0
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join([ [ '\\x1B[31mRed\\x1B[0m', 'Normal' ], [ 'Text', 'More' ] ], undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ '\\x1B[31mRed\\x1B[0m', 'Normal' ], [ 'Text', 'More' ] ]
────────────────────────────────────────────────────
undefined
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[31mRed[0m    Normal
Text   More
╚══════════════════════════════════════════════════╝"
`;

exports[`join([ [ 'Name', 'Age' ], [ 'Alice', '30' ] ], undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'Name', 'Age' ], [ 'Alice', '30' ] ]
────────────────────────────────────────────────────
undefined
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Name    Age
Alice   30
╚══════════════════════════════════════════════════╝"
`;

exports[`join([ [ 'a', 'b' ], [ 'c', 'd' ] ], { separator: ' | ' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a', 'b' ], [ 'c', 'd' ] ]
────────────────────────────────────────────────────
{
  separator: ' | '
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
a | b
c | d
╚══════════════════════════════════════════════════╝"
`;

exports[`join([ [ 'a', 'b', 'c' ], [ 'd' ] ], undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a', 'b', 'c' ], [ 'd' ] ]
────────────────────────────────────────────────────
undefined
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
a   b   c
d
╚══════════════════════════════════════════════════╝"
`;

exports[`join([ [ 'hi', 'world' ], [ 'hello', 'x' ] ], { align: 'right' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'hi', 'world' ], [ 'hello', 'x' ] ]
────────────────────────────────────────────────────
{
  align: 'right'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi   world
hello       x
╚══════════════════════════════════════════════════╝"
`;

exports[`join([], undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
────────────────────────────────────────────────────
undefined
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

╚══════════════════════════════════════════════════╝"
`;

exports[`normalize() 1`] = `
"
╔══════════════════════════════════════════════════╗ OUTPUTS THROW TYPEERROR
TypeError: Cannot read properties of undefined (reading 'length')
╚══════════════════════════════════════════════════╝"
`;

exports[`normalize([ 'a', 'b' ], [ 'c' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a', 'b' ]
────────────────────────────────────────────────────
[ 'c' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ [ 'a' ], [ 'b' ] ]
╚══════════════════════════════════════════════════╝"
`;

exports[`normalize([ 'a', 'b' ], [ 'c', 'd' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a', 'b' ]
────────────────────────────────────────────────────
[ 'c', 'd' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ [ 'a' ], [ 'b' ] ]
╚══════════════════════════════════════════════════╝"
`;

exports[`normalize([ [ 'a', 'b' ], [ 'c' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a', 'b' ], [ 'c' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ [ 'a', 'b' ], [ 'c', '' ] ]
╚══════════════════════════════════════════════════╝"
`;

exports[`normalize([ [ 'a', 'b' ], [ 'c', 'd' ] ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'a', 'b' ], [ 'c', 'd' ] ]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ [ 'a', 'b' ], [ 'c', 'd' ] ]
╚══════════════════════════════════════════════════╝"
`;

exports[`normalize([]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[]
╚══════════════════════════════════════════════════╝"
`;
